--- a/srcs/public/composer.json
+++ b/srcs/public/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "google/apiclient": "^2.17"
+        "google/apiclient": "^2.17",
+        "firebase/php-jwt": "^6.11"
     }
 }
