Añadido setup a Makefile. Se envían los mails correctamente

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,3 +16,5 @@ services:
     volumes:
       - ./srcs/public:/var/www/html
       - ./srcs/database:/var/www/html/database
+    environment:
+      JWTsecretKey: ${JWTsecretKey}
